<resources>
    <string name="app_name">BaldaWordGame</string>

    <string name="single_game">Одиночная игра</string>
    <string name="online_game">Игра онлайн</string>
    <string name="quit">Выйти</string>

    <string name="find_game_btn_text">Найти игру</string>
    <string name="create_game_btn_text">Создать игру</string>
    <string name="log_in_btn_text">Войти</string>
    <string name="sign_up_btn_text">Зарегистрироваться</string>
    <string name="confirm_btn_text">Подтвердить</string>
    <string name="email_hint_text">E-mail</string>
    <string name="password_hint_text">Пароль</string>
    <string name="confirm_password_hint_text">Подтвердить пароль</string>
    <string name="username_hint_text">Имя пользователя</string>
    <string name="room_creating_text_view_text">Игра онлайн</string>
    <string name="three_on_three_btn_text">3 на 3</string>
    <string name="five_on_five_btn_text">5 на 5</string>
    <string name="seven_on_seven_btn_text">7 на 7</string>
    <string name="any_format_time_btn_text">Любой</string>
    <string name="textview_game_format_text">Формат игрового поля:</string>
    <string name="game_format_label_text">Поле</string>
    <string name="textview_timer_text">Время на ход:</string>
    <string name="timer_label_text_view_text">Таймер</string>
    <string name="thirty_seconds_radio_text">30 сек.</string>
    <string name="one_minute_radio_text">1 мин.</string>
    <string name="two_minutes_radio_text">2 мин.</string>
    <string name="any_time_radio_text">Любое</string>
    <string name="room_creating_subtitle_text_view_text">Настройка партии</string>
    <string name="opponent_label_txt">Оппонент</string>
    <string name="play_button_text">Играть</string>
    <string name="player_label">Игрок</string>
    <string name="turn_plug_label">Чей ход</string>
    <string name="player_active_turn">Ваш ход</string>
    <string name="opponent_active_turn">Ход оппонента</string>
    <string name="timer_plug_label">Таймер</string>

    <string name="text_view_game_room_creation_label">Создание комнаты</string>
    <string name="text_view_game_grid_size_label">Размер игрового поля:</string>
    <string name="text_view_game_turn_time_label">Время на ход:</string>
    <string name="button_game_room_creation_proceed_not_active">Начать поиск</string>
    <string name="button_game_room_creation_proceed_active">Остановить поиск</string>
    <string name="text_view_open_rooms_label">Список комнат</string>
    <string name="text_view_game_room_player_label">Ваш словарь:</string>
    <string name="text_view_game_room_opponent_label">Словарь оппонента:</string>
    <string name="text_view_game_room_player_points">Ваши очки: 0</string>
    <string name="text_view_game_room_opponent_points">Очки оппонента: 0</string>
    <string name="text_view_dictionary_plug">Словарь пуст</string>
    <string name="text_view_waiting_gor_opponent_label">Ожидаем противника</string>
    <string name="button_skip_turn_text">SKIP</string>
    <string name="profile_tab_text">Профиль</string>
    <string name="game_rooms_tab_text">Комнаты</string>
    <string name="create_room_tab_text">Создать комнату</string>
    <string name="surrender_text_view">Хотите признать поражение?</string>
    <string name="surrender_and_leave">Хотите покинуть комнату и признать поражение?</string>
    <string name="yes_text_view">Да</string>
    <string name="no_text_view">Нет</string>
    <string name="enemy_surrendered_and_left">Противник признал поражение и покинул игру</string>
    <string name="leave_game">Выйти из комнаты</string>
    <string name="skip_turn_question">Хотите пропустить ход?</string>

    <string name="room_list_status_empty">Список пуст</string>
    <string name="loading">Загрузка…</string>

    <string name="dictionary_check_button_content_description">Посмотреть выбранное слово в словаре</string>
    <string name="confirm_combination_button_content_description">Подтвердить составленную комбинацию букв</string>
    <string name="skip_turn_button_content_description">Пропустить ход</string>
    <string name="surrender_button_content_description">Признать поражение</string>

    <string name="player_win">Вы победили!</string>
    <string name="player_lose">Вы проиграли!</string>

    <string name="start_new_game_question">Начать новую игру?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>