<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frost"
    android:orientation="vertical"
    tools:context=".GameCreationSettings">
    <!--    android:gravity="center"-->
    <TextView
        android:id="@+id/textViewFindGameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/room_creating_text_view_text"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textViewFindGameSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/room_creating_subtitle_text_view_text"
        android:textColor="@color/bleached_denim"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewFindGameFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/textview_game_format_text"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonThreeOnThree"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@drawable/grid_size_radio_button"
                    android:button="@android:color/transparent"
                    android:text="@string/three_on_three_btn_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButtonFiveOnFive"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/grid_size_radio_button"
                    android:button="@android:color/transparent"
                    android:text="@string/five_on_five_btn_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonSevenOnSeven"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@drawable/grid_size_radio_button"
                    android:button="@android:color/transparent"
                    android:text="@string/seven_on_seven_btn_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButtonAnySize"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/grid_size_radio_button"
                    android:button="@android:color/transparent"
                    android:text="@string/any_format_time_btn_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewGameCreationTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/textview_timer_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonTimerThirtySeconds"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@drawable/grid_size_radio_button"
                    android:button="@android:color/transparent"
                    android:text="@string/thirty_seconds_radio_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButtonTimerOnMinute"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="60dp"

                    android:background="@drawable/grid_size_radio_button"
                    android:button="@android:color/transparent"
                    android:text="@string/one_minute_radio_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonTimerTwoMinutes"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@drawable/grid_size_radio_button"
                    android:button="@android:color/transparent"
                    android:text="@string/two_minutes_radio_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButtonTimerAny"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/grid_size_radio_button"
                    android:button="@android:color/transparent"
                    android:text="@string/any_time_radio_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/confirmBtnFindGameActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_btn_text" />

    </LinearLayout>

    <!--    <Spinner-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:layout_marginBottom="10dp"-->
    <!--        android:id="@+id/spinnerGridSize"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="45dp" />-->

    <!--    <Spinner-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:layout_marginBottom="10dp"-->
    <!--        android:id="@+id/spinnerTimer"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="45dp" />-->

</LinearLayout>